allow user to specify real or synthetic datasets

--- a/config-wrapper.yaml
+++ b/config-wrapper.yaml
@@ -1,6 +1,11 @@
 ---
 synapse:
   exports: 
+    id: syn20852283
+    name: External REDCap exports
+    type: folder
+    description: folder containing subfolders containing BPC upload files
+  testing: 
     id: syn27538188
     name: External REDCap exports
     type: folder
