update points of contact

--- a/config-wrapper.yaml
+++ b/config-wrapper.yaml
@@ -28,11 +28,19 @@ reports:
 contacts:
   DFCI:
   - hhz
+  - apostle
+  - Ashnewc
+  - ddand
+  - daniel_quinn
   MSK:
   - hhz
+  - pillais
+  - julia.e.rudolph
   UHN:
   - hhz
+  - celeste.yu
   VICC:
   - hhz
+  - Michele
   SAGE:
   - hhz
